ingress/ingress-gyak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-dep
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-dep-default
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: app-default
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: app-default
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: app
  ports:
    - port: 12345
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: example-service-default
spec:
  selector:
    app: app-default
  ports:
    - port: 12345
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  defaultBackend:
    service:
      name: example-service-default
      port:
        number: 12345
  rules:
    - host: "*.prolikaja.hu"
      http:
        paths:
          - path: "/aaa"
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 12345
          - path: "/bbb"
            pathType: Prefix
            backend:
              service:
                name: example-service-default
                port:
                  number: 12345
